# opticloud-device-mgmt-cpp

./: CMakeLists.txt  singleentrytransfer.cpp
include/opticloud-device-mgmt-cpp/: connectionparameters.hpp  singleentrytransfer.hpp
